Fix web header (especially on mobile)

--- a/packages/tailwind-custom/theme.css
+++ b/packages/tailwind-custom/theme.css
@@ -27,7 +27,7 @@
         --color-bg-accent: #424242;
         --color-bg-accent-inverted: #FFFFFF;
         --color-line: #828282;
-        --color-line-disabled: #80D0C9C9;
+        --color-line-disabled: #D0C9C980;
         --color-text-primary: #FFFFFF;
         --color-text-primary-inverted: #282624;
         --color-backdrop: #00000066;
